--- a/_config.yml
+++ b/_config.yml
@@ -43,12 +43,6 @@ exclude:
 defaults:
   -
     scope:
-      path: "_glossary"
-    values:
-      layout: entry
-
-  -
-    scope:
-      path: "_alphabet"
+      path: ""
     values:
       layout: default
