Inlined CSS in the head for faster load

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "fs-promise": "^0.4.1"
   },
   "scripts": {
-    "export": "node bin/export"
+    "export": "node bin/export",
+    "css": "cp _site/assets/css/main.css _includes"
   }
 }
