Properly inlined the stylesheet in the head

--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "fs-promise": "^0.4.1"
   },
   "scripts": {
-    "export": "node bin/export",
-    "css": "cp _site/assets/css/main.css _includes"
+    "export": "node bin/export"
   }
 }
