--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "devDependencies": {
+    "fs-promise": "^0.4.1",
     "marked": "^0.3.5",
-    "fs-promise": "^0.4.1"
+    "uglify-js": "^2.6.2"
   },
   "scripts": {
+    "js": "cat assets/js/main.js | uglifyjs > assets/js/main.min.js",
     "export": "node bin/export"
   }
 }
