Added a definition for OO

--- a/_data/abbr.yml
+++ b/_data/abbr.yml
@@ -22,6 +22,7 @@ JSON: JavaScript Object Notation
 JSON-LD: JSON for Linked Data
 MVC: Model View Controller
 MVVM: Model View ViewModel
+OO: Object-oriented
 REST: Representational State Transfer
 RESTful: Representational State Transfer
 SVG: Scalable Vector Graphics
