Added a definition for XHR

--- a/_data/abbr.yml
+++ b/_data/abbr.yml
@@ -31,4 +31,5 @@ UI: User Interface
 UMD: Universal Module Definition
 URL: Uniform Resource Locator
 WebGL: Web Graphics Library
+XHR: XMLHttpRequest
 XML: Extensible Markup Language
