--- a/_data/abbr.yml
+++ b/_data/abbr.yml
@@ -22,7 +22,7 @@ JSON: JavaScript Object Notation
 JSON-LD: JSON for Linked Data
 MVC: Model View Controller
 MVVM: Model View ViewModel
-OO: Object-oriented
+OO: Object Oriented
 REST: Representational State Transfer
 RESTful: Representational State Transfer
 SVG: Scalable Vector Graphics
