--- a/_data/abbr.yml
+++ b/_data/abbr.yml
@@ -1,4 +1,4 @@
-AJAX: Asynchronous JavaScript and XML
+Ajax: Asynchronous JavaScript and XML
 AMD: Asynchronous Module Definition
 API: Application Program Interface
 BDD: Behaviour Driven Development
