Removed React Native Package Manager everywhere and put it under abbbr

--- a/_data/abbr.yml
+++ b/_data/abbr.yml
@@ -25,6 +25,7 @@ MVVM: Model View ViewModel
 OO: Object Oriented
 REST: Representational State Transfer
 RESTful: Representational State Transfer
+rnpm: React Native Package Manager
 SVG: Scalable Vector Graphics
 TDD: Test Driven Development
 UI: User Interface
