Added CLI to list of abbreviations

--- a/_data/abbr.yml
+++ b/_data/abbr.yml
@@ -6,6 +6,7 @@ BEM: Block Element Modifier
 BSON: Binary Simple Object Model
 CSS: Cascading StyleSheets
 CSS3: Cascading StyleSheets
+CLI: Command Line Interface
 CORS: Cross Origin Resource sharing
 CPU: Central Processor Unit
 DOM: Document Object Model
