Update author’s name

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: Simplified JavaScript Jargon
 description: > # this means to ignore newlines until "baseurl:"
-  [Simplified JavaScript Jargon](https://github.com/HugoGiraudel/SJSJ) (short SJSJ) is a community-driven attempt
+  [Simplified JavaScript Jargon](https://github.com/KittyGiraudel/SJSJ) (short SJSJ) is a community-driven attempt
   at explaining the loads of buzzwords making the current JavaScript ecosystem
   in a few simple words. The idea is not to replace individual documentations,
   but to act as some kind of glossary that can be easily referenced.
